(fix) slides are height: auto on mobile
- vh units are unreliable across mobile devices

--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -17,7 +17,14 @@ $page-height: 99vh;
 .principle {
 
   grid-template-rows: auto auto auto;
-  height: $page-height;
+  padding-top: $size-2;
+  padding-bottom: $size-3;
+
+  @include desktop {
+    height: $page-height;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 
   .headline {
     margin: 0;
